--- a/sinatra-skeleton/app/views/submit.erb
+++ b/sinatra-skeleton/app/views/submit.erb
@@ -89,7 +89,7 @@
           console.log('desc', desc);
 
           $.ajax({
-            url: '/dashboard',
+            url: '/submit',
             method: 'POST',
             data: {
               title: title,
