--- a/sinatra-skeleton/app/views/submit.erb
+++ b/sinatra-skeleton/app/views/submit.erb
@@ -21,9 +21,8 @@
       <div class="header clearfix">
        <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Voting</a></li>
+            <li role="presentation"><a href="/vote">Voting</a></li>
+            <li role="presentation"><a href="">About</a></li>
           </ul>
         </nav>
       </div>
@@ -32,14 +31,15 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Modal title</h4>
+              <h4 class="modal-title">What's yo' name??</h4>
             </div>
             <div class="modal-body">
-              <p>One fine body&hellip;</p>
+              <form>
+                <input type="text" id="name" name="name">
+                <button type="button" id="name_submit" class="btn btn-primary">Send it! >>></button>
+              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -68,7 +68,7 @@
             <label for="decribe-idea">Description</label>
             <textarea class="form-control" id="description" name="description" rows="3" placeholder="Tell us more"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary btn-lg btn-block" id="form_submit">Submit</button>
+          <button type="submit" class="btn btn-primary btn-lg btn-block" id="idea_submit">Enlighten Us</button>
         </form>
       </div>
     </div>
@@ -78,20 +78,31 @@
     </div>
     <script type="text/javascript">
       $(document).ready(function() {
-        // $('#login_modal').modal('show');
+        var author
+        $('#login_modal').modal('show');
+
+        $('#name_submit').click(function(e) {
+          e.preventDefault();
+          author = $('#name').val();
+          console.log('name:', author);
+
+          $('#login_modal').modal('hide');
+        });
 
         // ajax for form submission
-        $('#form_submit').click(function(e) {
+        $('#idea_submit').click(function(e) {
           e.preventDefault();
           var title = $('#title').val();
           var desc = $('#description').val();
-          console.log('title', title);
-          console.log('desc', desc);
+          console.log('title:', title);
+          console.log('desc:', desc);
+          console.log('name:', author);
 
           $.ajax({
             url: '/submit',
             method: 'POST',
             data: {
+              author: author,
               title: title,
               description: desc
             }
