--- a/sinatra-skeleton/app/views/submit.erb
+++ b/sinatra-skeleton/app/views/submit.erb
@@ -30,7 +30,6 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h4 class="modal-title">What's yo' name??</h4>
             </div>
             <div class="modal-body">
@@ -79,6 +78,11 @@
     <script type="text/javascript">
       $(document).ready(function() {
         var author
+        $('#login_modal').modal({
+         backdrop: 'static',
+         keyboard: false
+        });
+        
         $('#login_modal').modal('show');
 
         $('#name_submit').click(function(e) {
