--- a/sinatra-skeleton/app/views/layout.erb
+++ b/sinatra-skeleton/app/views/layout.erb
@@ -6,7 +6,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Welcome to Foundation</title>
+  <title>Poll Position</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   
