Adjusted routes, added admin page, Connected voting page to db and introduced vote count JS functionality

--- a/sinatra-skeleton/app/views/layout.erb
+++ b/sinatra-skeleton/app/views/layout.erb
@@ -6,26 +6,13 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Welcome to Foundation</title>
-  
-  <!-- Included CSS Files (Uncompressed) -->
-  
-<!-- <link rel="stylesheet" href="stylesheets/foundation.css"> -->
-  
-  
-  <!-- Included CSS Files (Compressed) -->
-  <!--link rel="stylesheet" href="foundation/stylesheets/foundation.min.css">
-  <link rel="stylesheet" href="foundation/stylesheets/app.css"-->
-  
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-  <!--script src="foundation/javascripts/modernizr.foundation.js"></script-->
-
-  <title></title>
+<title>Poll Position</title>
 </head>
 <body>
 
