--- a/sinatra-skeleton/app/views/landing.erb
+++ b/sinatra-skeleton/app/views/landing.erb
@@ -13,13 +13,14 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
-    <link href="stylesheets/stylish-portfolio.css" rel="stylesheet">
+    <link href="/stylesheets/stylish-portfolio.css" rel="stylesheet">
+    <link href="/stylesheets/blink.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,10 +38,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Pole Position</h1>
-            <h2>Cast Your Vote</h2>
+            <h1 class="main">Poll Position</h1>
+            <h2 class="cast">Cast Your Vote</h2>
             <br>
-            <a href="#about">Press Start</a>
+            <h1 class="start blink_me"><a href="#about">Press Start</a></h1>
         </div>
     </header>
     <!-- jQuery -->
