--- a/sinatra-skeleton/app/views/admin/manage_ideas.erb
+++ b/sinatra-skeleton/app/views/admin/manage_ideas.erb
@@ -26,68 +26,30 @@
 
 </head>
 
-<body>
-    
-    <div class="container">
-    <h1>
-        Cast Your Vote 
-    </h1>
-        <!-- collapsible groop --> 
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Project Name
-        </a>
-        <span class="check"><input type="checkbox"></span>
-      </h4>
+<body>  
+  <div class="container">
+    <h1>Cast Your Vote</h1>
+        <!-- collapsible group --> 
+    <% @id = 1 %>
+    <% @ideas.each do |idea| %>  
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="false">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordion" data-target="#<%= @id %>">
+          <h4 class="panel-title">
+            <%= idea.title %> by: <%= idea.author %>
+            <span class="check"><input type="checkbox"></span>
+          </h4>
+        </div>
+        <div id="<%= @id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+          <div class="panel-body">
+            <%= idea.description %> 
+          </div>
+        </div>
+      </div>  
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 
-      </div>
-    </div>
+    <% @id += 1 %>
+    <% end %>
+    <button id="button" type="button" class="btn btn-primary btn-lg">Submit</button>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Project Name
-        </a>
-        <span class="check"><input type="checkbox"></span>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
-      <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Project Name
-        </a>
-        <span class="check"><input type="checkbox"></span>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 
-      </div>
-    </div>
-  </div>
-</div>
-     <button type="button" class="btn btn-primary btn-lg">Submit</button>
-    </div>
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
-
-</body>
 
 </html>
