final commit before merge

--- a/sinatra-skeleton/app/views/about.erb
+++ b/sinatra-skeleton/app/views/about.erb
@@ -17,6 +17,10 @@
     <!-- Custom CSS -->
     <link href="stylesheets/one-page-wonder.css" rel="stylesheet">
 
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -44,12 +48,10 @@
     <div class="container">
         <h1>Meet the team behind Poll Position</h1>
         <hr class="featurette-divider">
-
         <!-- First Featurette -->
         <div class="featurette" id="about">
             <img class="featurette-image img-circle img-responsive pull-right" src="img/cody.jpg">
             <h2 class="featurette-heading">Cody Stewart
-              <br>  <span class="text-muted">Will Catch Your Eye</span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -60,7 +62,6 @@
         <div class="featurette" id="services">
             <img class="featurette-image img-circle img-responsive pull-left" src="img/priya.jpg">
             <h2 class="featurette-heading">Priya Ramanath
-              <br>  <span class="text-muted">Is Pretty Cool Too.</span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -71,7 +72,6 @@
         <div class="featurette" id="contact">
             <img class="featurette-image img-circle img-responsive pull-right" src="img/lachlan.jpg">
             <h2 class="featurette-heading">Lachlan Mackenzie
-              <br>  <span class="text-muted">Will Seal the Deal.</span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -81,7 +81,6 @@
         <div class="featurette" id="about">
             <img class="featurette-image img-circle img-responsive pull-left" src="img/nico.jpg">
             <h2 class="featurette-heading">Nico Flojo
-               <br> <span class="text-muted">Will Catch Your Eye</span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
