--- a/sinatra-skeleton/app/views/landing.erb
+++ b/sinatra-skeleton/app/views/landing.erb
@@ -41,7 +41,7 @@
             <h1 class="main">Poll Position</h1>
             <h2 class="cast">Cast Your Vote</h2>
             <br>
-            <h1 class="start blink_me"><a href="#about">Press Start</a></h1>
+            <h3 class="start blink_me"><a href="/submit">Press Start</a></h1>
         </div>
     </header>
     <!-- jQuery -->
