--- a/sinatra-skeleton/app/views/user/vote.erb
+++ b/sinatra-skeleton/app/views/user/vote.erb
@@ -28,6 +28,14 @@
 
 <body>  
   <div class="container">
+   <div class="header clearfix">
+     <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation"><a href="/vote">Voting</a></li>
+          <li role="presentation"><a href="">About</a></li>
+        </ul>
+      </nav>
+    </div>
     <h1>Cast Your Vote</h1>
         <!-- collapsible group --> 
     <% @id = 1 %>
