--- a/sinatra-skeleton/app/views/admin/manage_ideas.erb
+++ b/sinatra-skeleton/app/views/admin/manage_ideas.erb
@@ -28,7 +28,7 @@
 
 <body>  
   <div class="container">
-    <h1>Cast Your Vote</h1>
+    <h1>The Chopping Block</h1>
         <!-- collapsible group --> 
     <% @id = 1 %>
     <% @ideas.each do |idea| %>  
@@ -36,20 +36,22 @@
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordion" data-target="#<%= @id %>">
           <h4 class="panel-title">
-            <%= idea.title %> by: <%= idea.author %>
+            <%= idea.title %> 
+            <%= idea.final %>
             <div class="btn-group drop">
               <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              <span class="caret "></span>
+              <span class="caret"></span>
               </button>
             <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Edit Title</a></li>
-               <li><a href="#">Edit Description</a></li>
-               <li><a href="#">Select for Finals</a></li>
-               <li><a href="#">Remove</a></li>
+               <li><a href="/edit_idea/<%= idea.id %>">Edit</a></li>
+               <li><a href="/add_final/<%= idea.id %>">Select for Finals</a></li>
+               <li><a href="/delete_idea/<%= idea.id %>">Remove</a></l>
             </ul>
            </div>
     <!-- ended button --> 
-            <span class="badge">14</span>
+          </h4>
+          <h4 class="panel-title">
+            by: <%= idea.author %>
           </h4>
         </div>
         <div id="<%= @id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
