--- a/sinatra-skeleton/app/views/user/submit.erb
+++ b/sinatra-skeleton/app/views/user/submit.erb
@@ -22,7 +22,7 @@
        <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="/vote">Voting</a></li>
-            <li role="presentation"><a href="">About</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
           </ul>
         </nav>
       </div>
