added whoareyou.erb page

--- a/sinatra-skeleton/app/views/submit.erb
+++ b/sinatra-skeleton/app/views/submit.erb
@@ -22,8 +22,8 @@
        <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Voting</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
+            <li role="presentation"><a href="#">VOTE</a></li>
           </ul>
         </nav>
       </div>
