--- a/sinatra-skeleton/app/views/admin.erb
+++ b/sinatra-skeleton/app/views/admin.erb
@@ -34,7 +34,7 @@
        <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
             <li role="presentation"><a href="#">Manage Groups</a></li>
           </ul>
         </nav>
