--- a/sinatra-skeleton/app/views/final.erb
+++ b/sinatra-skeleton/app/views/final.erb
@@ -19,7 +19,7 @@
        <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
             <li role="presentation"><a href="#">End Session</a></li>
           </ul>
         </nav>
