--- a/sinatra-skeleton/app/views/groups.erb
+++ b/sinatra-skeleton/app/views/groups.erb
@@ -7,48 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Poll Position</title>
+    <title>Poll Position Groups</title>
     <!-- Custom CSS -->
     <link href="/stylesheets/voting.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
+    
+
       <!-- nav --> 
        <div class="header clearfix">
        <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
             <li role="presentation"><a href="#">View Final Groups</a></li>
           </ul>
         </nav>
       </div>
       <!-- nav end --> 
+    <div class="row">
     <h1>
-        Determine Winners / Assign Projects
+        Determine Winners 
     </h1>
         <!-- collapsible groop --> 
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
+
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           Project Name
         </a>
 
-        <!--added button -->
-        <div class="btn-group drop">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret "></span>
-          </button>
-            <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Project 1</a></li>
-               <li><a href="#">Project 2</a></li>
-               <li><a href="#">Project 3</a></li>
-               <li><a href="#">Project 4</a></li>
-            </ul>
-          </div><!-- ended button --> 
       <span class="badge">14</span>
       </h4>
     </div>
@@ -59,60 +51,18 @@
       </div>
     </div>
   </div>
+  <h1>Assign Projects</h1>
     <ul class="list-group">
       <li class="list-group-item">Lachlan Mackenzie<!--added button -->
         <div class="btn-group drop">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret "></span>
-          </button>
-            <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Project 1</a></li>
-               <li><a href="#">Project 2</a></li>
-               <li><a href="#">Project 3</a></li>
-               <li><a href="#">Project 4</a></li>
-               <li><a href="#">Remove from group</a></li>
-            </ul>
-          </div> <!-- ended button --> 
+          <input class="form-control input-s form" type="integer" placeholder="#">
+        </div> <!-- ended button --> 
       </li>
-      <li class="list-group-item">Nico Flojo<!--added button -->
-        <div class="btn-group drop">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret "></span>
-          </button>
-            <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Remove</a></li>
-            </ul>
-          </div> <!-- ended button --> 
-      </li><li class="list-group-item">Patrick Stewart<!--added button -->
-        <div class="btn-group drop">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret "></span>
-          </button>
-            <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Remove from group</a></li>
-            </ul>
-          </div> <!-- ended button --> 
-      </li><li class="list-group-item">Priya Ramanath<!--added button -->
-        <div class="btn-group drop">
-          <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="caret "></span>
-          </button>
-            <ul class="dropdown-menu" role="menu">
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Add to group</a></li>
-               <li><a href="#">Remove from group</a></li>
-            </ul>
-          </div> <!-- ended button --> 
-      </li>
+
+    </div> <!--end .row --> 
+
     </ul>
-     <button type="button" class="btn danger btn-success btn-lg">Finish</button>
+     <button type="button" class="btn danger btn-success btn-lg">Submit</button>
     </div>
     <!-- jQuery -->
     <script src="../js/jquery.js"></script>
