--- a/sinatra-skeleton/public/stylesheets/voting.css
+++ b/sinatra-skeleton/public/stylesheets/voting.css
@@ -1,5 +1,3 @@
-
-
 .container {
  /* vertical-align: center;*/
   padding-right: 20px;
@@ -35,6 +33,7 @@ body {
 
 .drop {
   float: right;
+  padding-bottom: 5px;
 }
 
 .danger {
@@ -46,9 +45,6 @@ body {
   margin-right: 5px;
 }
 
-
-
-
 /* Groups Styles */ 
 
 .list-group {
@@ -57,6 +53,15 @@ body {
 
 .btn {
   padding: 0 20px;
+}
+
+.form {
+  float: right;
+}
+
+.form-control {
+  height: 25px;
+  width: 35px;
 }
 
 
