--- a/sinatra-skeleton/app/views/user/submit.erb
+++ b/sinatra-skeleton/app/views/user/submit.erb
@@ -30,7 +30,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">What's yo' name??</h4>
+              <h4 class="modal-title">What's yo' name?</h4>
             </div>
             <div class="modal-body">
               <form>
