--- a/sinatra-skeleton/app/views/user/vote.erb
+++ b/sinatra-skeleton/app/views/user/vote.erb
@@ -46,7 +46,7 @@
         <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordion" data-target="#<%= @id %>">
           <h4 class="panel-title">
             <%= idea.title %> by: <%= idea.author %>
-            <span class="check"><input type="checkbox" name="submitvote" value="<%= idea.title %>"></span>
+            <span class="check"><input type="checkbox" name="votes[<%= idea.id %>]" ></span>
           </h4>
         </div>
         <div id="<%= @id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
