--- a/sinatra-skeleton/app/views/landing.erb
+++ b/sinatra-skeleton/app/views/landing.erb
@@ -11,11 +11,9 @@
 
     <title>Welcome to Poll Position</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="/stylesheets/stylish-portfolio.css" rel="stylesheet">
-    <link href="/stylesheets/blink.css" rel="stylesheet">
+    <link href="../stylesheets/stylish-portfolio.css" rel="stylesheet">
+    <link href="../stylesheets/blink.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -39,17 +37,11 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1 class="main">Poll Position</h1>
-            <h2 class="cast">Cast Your Vote</h2>
+            <h2 class="cast">A Lighthouse Labs Product</h2>
             <br>
-            <h1 class="start blink_me"><a href="#about">Press Start</a></h1>
+            <h3 class="start blink_me translate"><a href="/submit">Press Start</a></h1>
         </div>
     </header>
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
     <!-- Custom Theme JavaScript -->
     <script>
     // Closes the sidebar menu
@@ -57,15 +49,18 @@
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
+
     // Opens the sidebar menu
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
+
     // Scrolls to the selected menu item on the page
     $(function() {
         $('a[href*=#]:not([href=#])').click(function() {
             if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+
                 var target = $(this.hash);
                 target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
                 if (target.length) {
