--- a/sinatra-skeleton/app/views/layout.erb
+++ b/sinatra-skeleton/app/views/layout.erb
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8" />
 
-  <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
+  <link href="/stylesheets/stylish-portfolio.css" rel="stylesheet">
+
+  <link href="/stylesheets/voting.css" rel="stylesheet">
+
+   <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 
