--- a/sinatra-skeleton/app/views/whoareyou.erb
+++ b/sinatra-skeleton/app/views/whoareyou.erb
@@ -2,14 +2,14 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="/stylesheets/stylish-portfolio.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-  
 </head>
-
 <header id="top" class="header">
-   <div class="text-vertical-center">
-       <h1 class="main">Poll Position</h1>
-       <h2 class="cast">Cast Your Vote</h2>
-       <br>
-       <h1 class="start blink_me"><a href="/whoareyou">Press Start</a></h1>
-   </div>
+     <div class="text-vertical-center">
+         <h1 class="main">Who are are you?</h1>
+         <br>
+         <h3 class="start admin"><a href="/admin/ideas">Admin</a></h1>
+
+         <br>
+         <h3 class="start student"><a href="student/submit">Student</a></h1>
+     </div>
 </header>
