New styling and logic for group assignment

--- a/sinatra-skeleton/app/views/admin/manage_groups.erb
+++ b/sinatra-skeleton/app/views/admin/manage_groups.erb
@@ -3,7 +3,7 @@
 
 
    <!-- nav --> 
-   <div class="header clearfix">
+   <div class="nav">
     <nav>
      <ul class="nav nav-pills pull-right">
        <li role="presentation"><a href="#">Home</a></li>
