--- a/sinatra-skeleton/app/views/admin/final_groups.erb
+++ b/sinatra-skeleton/app/views/admin/final_groups.erb
@@ -1,14 +1,6 @@
  <div class="container">
   <!-- nav --> 
-  <div class="header clearfix">
-   <nav>
-    <ul class="nav nav-pills pull-right">
-      <li role="presentation"><a href="#">Home</a></li>
-      <li role="presentation"><a href="#">About</a></li>
-      <li role="presentation"><a href="#">Manage Groups</a></li>
-    </ul>
-  </nav>
-</div>
+ 
 <!-- nav end --> 
 <h1>
   Final Midterm Teams
@@ -38,11 +30,15 @@
    
  </h4>
 </div>
-<div id="<%= @id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-  <div class="panel-body">
-   student names list
- </div>
-</div>
+<% @students.each do |student| %>
+  <% if student.idea_id == idea.id %>
+  <div id="names" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+    <div class="panel-body">
+        <%= student.name %>
+    </div>
+  </div>
+<% end %>
+<% end %>
 </div>
 <% @id += 1 %>
 <% end %> 
