--- a/sinatra-skeleton/public/stylesheets/stylish-portfolio.css
+++ b/sinatra-skeleton/public/stylesheets/stylish-portfolio.css
@@ -161,6 +161,7 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
     padding-bottom: 200px;
+    padding-top: 50px;
 }
 
 /* User Custom Styles */
@@ -180,8 +181,45 @@ hr.small {
 .start a {
     color: white;
     font-family: 'Press Start 2P', cursive;
-    font-size: 2em;
+    font-size: 1em;
     text-decoration: none;
+}
+
+.blink_me {
+    -webkit-animation-name: blinker;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+
+    -moz-animation-name: blinker;
+    -moz-animation-duration: 2s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+
+    animation-name: blinker;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@-moz-keyframes blinker {  
+    0% { opacity: 2.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 3.0; }
+}
+
+@-webkit-keyframes blinker {  
+    0% { opacity: 0.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 0.5; }
+}
+
+@keyframes blinker {  
+    0% { opacity: 0.5; }
+    50% { opacity: 0.0; }
+    100% { opacity: 0.5; }
+
+
 }
 
 
